--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="http://code.ionicframework.com/1.0.0-beta.13/js/angular/angular-sanitize.js"</script>
+    <script src="lib/lodash/dist/lodash.js"</script>
+    <script src="lib/restangular/dist/restangular.js"</script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -18,7 +20,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="everVoice">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
