--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,17 @@
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
       <ion-content>
+
+      <h1> This is some text </h1>
+      <button class="button button-block button-assertive" ng-hide="false">Record</button>
+      <button class="button button-block button-energized" ng-hide="true">Stop</button>
+      <button class="button button-block button-stable">Save to Evernote</button>
+      <button class="button button-block button-dark">Delete</button>
+
       </ion-content>
+      <ion-footer-bar class="bar footer-bar bar-stable">
+        <h1 class="title">The Footer</h1>
+      </ion-footer-bar>
     </ion-pane>
   </body>
 </html>
