added buttons and angular. Still needs work

--- a/www/index.html
+++ b/www/index.html
@@ -29,13 +29,13 @@
       <ion-content>
 
       <h1> This is some text </h1>
-      <button class="button button-block button-assertive" ng-hide="false">Record</button>
-      <button class="button button-block button-energized" ng-hide="true">Stop</button>
+      <button class="button button-block button-assertive button-large" ng-click="record()" ng-hide="stopActive">Record</button>
+      <button class="button button-block button-energized button-large" ng-click="stop()" ng-hide="recordActive">Stop</button>
       <button class="button button-block button-stable">Save to Evernote</button>
       <button class="button button-block button-dark">Delete</button>
 
       </ion-content>
-      <ion-footer-bar class="bar footer-bar bar-stable">
+      <ion-footer-bar class="bar-stable">
         <h1 class="title">The Footer</h1>
       </ion-footer-bar>
     </ion-pane>
