--- a/www/index.html
+++ b/www/index.html
@@ -24,19 +24,21 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title ">EverVoice</h1>
       </ion-header-bar>
       <ion-content>
 
       <h1> This is some text </h1>
-      <button class="button button-block button-assertive button-large" ng-click="record()" ng-hide="stopActive">Record</button>
-      <button class="button button-block button-energized button-large" ng-click="stop()" ng-hide="recordActive">Stop</button>
+     <div> 
+      <button class="button button-block button-assertive button-large record-controls" ng-click="voiceService.record()" ng-show="!voiceService.recording">Record</button>
+      <button class="button button-block button-energized button-large record-controls" ng-click="voiceService.stop()" ng-show="voiceService.recording">Stop</button>
+    </div>
+    <div>
       <button class="button button-block button-stable">Save to Evernote</button>
-      <button class="button button-block button-dark">Delete</button>
+    </div>
 
       </ion-content>
       <ion-footer-bar class="bar-stable">
-        <h1 class="title">The Footer</h1>
       </ion-footer-bar>
     </ion-pane>
   </body>
