--- a/www/index.html
+++ b/www/index.html
@@ -26,18 +26,22 @@
       <ion-header-bar class="bar-stable">
         <h1 class="title ">EverVoice</h1>
       </ion-header-bar>
-      <ion-content>
-
-      <h1> This is some text </h1>
+      
+  <ion-content>
+    <div class="content">
      <div> 
-      <button class="button button-block button-assertive button-large record-controls" ng-click="voiceService.record()" ng-show="!voiceService.recording">Record</button>
-      <button class="button button-block button-energized button-large record-controls" ng-click="voiceService.stop()" ng-show="voiceService.recording">Stop</button>
+      <button class="button button-block button-assertive button-large record-controls" ng-click="voiceService.record()" ng-show="!recordActive">Record</button>
+      <button class="button button-block button-energized button-large record-controls" ng-click="voiceService.stop()" ng-show="recordActive">Stop</button>
     </div>
     <div>
       <button class="button button-block button-stable">Save to Evernote</button>
     </div>
-
-      </ion-content>
+    <div class="row-center"> 
+      <p class="text-center">The objective of this App is to record your voice using the iOS microphone, send the recording to the AT&T Speech to Text API, return the results, and save the text as a note in Evernote.</p>
+    </div>
+  </div>
+  </ion-content>
+      
       <ion-footer-bar class="bar-stable">
       </ion-footer-bar>
     </ion-pane>
