Added Cordova JS and also tested out HTML, SCSS and timer duration. Still have things to do

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,9 @@
     <div>
       <button class="button button-block button-stable">Save to Evernote</button>
     </div>
+    <div class="padding text-center"> 
+      Record Time: {{Timer}}
+    </div>
     <div class="row-center"> 
       <p class="text-center">The objective of this App is to record your voice using the iOS microphone, send the recording to the AT&T Speech to Text API, return the results, and save the text as a note in Evernote.</p>
     </div>
