--- a/www/index.html
+++ b/www/index.html
@@ -28,16 +28,17 @@
       </ion-header-bar>
       
   <ion-content>
-    <div class="content">
+    <div class="content" ng-controller="RecordVoice">
      <div> 
       <button class="button button-block button-assertive button-large record-controls" ng-click="voiceService.record()" ng-show="!recordActive">Record</button>
       <button class="button button-block button-energized button-large record-controls" ng-click="voiceService.stop()" ng-show="recordActive">Stop</button>
     </div>
     <div>
-      <button class="button button-block button-stable">Save to Evernote</button>
+      <button class="button button-block button-stable" ng-click="showConfirm()">Save to Evernote</button>
+      <script id="popup-template.html" type="text/ng-template"></script>
     </div>
     <div class="padding text-center"> 
-      Record Time: {{Timer}}
+      <div class='record-time'>Record Time: {{ recordTime | timecode }}</div>
     </div>
     <div class="row-center"> 
       <p class="text-center">The objective of this App is to record your voice using the iOS microphone, send the recording to the AT&T Speech to Text API, return the results, and save the text as a note in Evernote.</p>
