still playing with ios

--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@
       
   <ion-content>
     <div class="content">
-     <div ng-controller="RecordVoice"> 
-      <button class="button button-block button-assertive button-large record-controls" ng-click="captureVideo()">Record</button>
+     <div ng-controller="Capture">
+      <button class="button button-block button-assertive button-large record-controls" ng-click="takePicture()">Record</button>
     </div>
     <div ng-controller="PopupCtrl">
       <button class="button button-block button-stable" ng-click="showConfirm()">Save to Evernote</button>
