--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -11,6 +11,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/lodash/dist/lodash.js"></script>
+    <script src="lib/evernote-sdk-minified.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova-mocks.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 
